--- a/chatsite/chat/templates/chat/createroom.html
+++ b/chatsite/chat/templates/chat/createroom.html
@@ -43,7 +43,12 @@
     <label for="room-name-input">채팅방 이름을 입력하세요:</label>
     <input id="room-name-input" type="text" size="50" /><br>
     <button id="room-name-submit">Enter</button>
-
+    <h2>채팅 방 목록:</h2>
+    <ul>
+        {% for room in chat_rooms %}
+            <li><a href="{% url 'chatroom' room.room_name %}">{{ room.room_name }}</a></li>
+        {% endfor %}
+    </ul>
     <script>
         var roomNameInput = document.querySelector("#room-name-input");
         var roomNameSubmit = document.querySelector("#room-name-submit");
